# langchain-llm-toolkit

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  OPENCLAW_GUIDE.md  OPEN_SOURCE_SUMMARY.md  QUICK_REFERENCE.md  README.md  README.zh-CN.md  SECURITY.md  api.py  app.py  cache.py  cli.py  conftest.py  conversation.py  evaluate_rag.py  exceptions.py  import_docs.py  llm_integration.py  pyproject.toml  pytest.ini  rag.py  rag_query_web.py  rate_limiter.py  render.yaml  requirements.txt  test_api.py  test_config.py  test_conversation.py  test_document.txt  test_document_loader.py  test_document_processing.py  test_llm_integration.py  test_logger.py  test_ollama.py  (+4 more)
.github/workflows/: ci.yml
docs/: AI_VS_RAG_COMPARISON.md  Agent.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Claude.md  DOCS_REORGANIZATION_SUMMARY.md  OPENCLAW_GUIDE.md  OPENCLAW_PROJECT_GUIDE.md  OPTIMIZATION_IMPLEMENTATION.md  OPTIMIZATION_SUGGESTIONS.md  QUICK_REFERENCE.md  README.md  RENAME_SUMMARY.md  SECURITY_AUDIT.md  Skill.md  architecture.md
examples/: agent_example.py
qdrant_storage/: meta.json
src/langchain_llm_toolkit/: __init__.py  api.py  app.py  auth.py  cache.py  cli.py  conversation.py  conversation_store.py  document_import_manager.py  document_loader.py  evaluate_rag.py  exceptions.py  hybrid_retriever.py  import_docs.py  llm_integration.py  logger.py  markdown_loader.py  metadata_generator.py  performance.py  prompt_templates.py  rag.py  rate_limiter.py  text_splitter.py  token_cost_manager.py
src/langchain_llm_toolkit/agent/: __init__.py  base.py  builtin_tools.py  react_agent.py  task_planner.py  tools.py
src/langchain_llm_toolkit/config/: settings.py
src/langchain_llm_toolkit/models/: schemas.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_auth.py  test_cache.py  test_cache_performance.py  test_cli.py  test_config.py  test_conversation.py  test_conversation_store.py  test_document_import_manager.py  test_document_loader.py  test_document_processing.py  test_evaluate_rag.py  test_exceptions.py  test_hybrid_advanced.py  test_hybrid_retriever.py  test_llm_integration.py  test_logger.py  test_markdown_loader.py  test_metadata_generator.py  test_performance.py  test_performance_module.py  test_prompt_templates.py  test_rag.py  test_rag_embeddings.py  test_rag_extended.py  test_rate_limiter.py  test_schemas.py  test_text_splitter.py  test_token_cost_manager.py
