[project]
name = "langchain-llm-toolkit"
version = "0.1.0"
description = "一个基于 LangChain 和 LiteLLM 的完整 LLM 工具集，支持文本生成、聊天对话和 RAG 文档问答"
authors = [
    { name = "Erishen Sun", email = "erishen@qq.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["langchain", "llm", "rag", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "aiohappyeyeballs>=2.6.0",
    "aiohttp>=3.13.0",
    "aiosignal>=1.4.0",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.13.0",
    "attrs>=26.1.0",
    "certifi>=2026.2.0",
    "charset-normalizer>=3.4.0",
    "click>=8.1.0",
    "distro>=1.9.0",
    "fastuuid>=0.14.0",
    "filelock>=3.25.0",
    "frozenlist>=1.8.0",
    "fsspec>=2026.3.0",
    "h11>=0.16.0",
    "hf-xet>=1.4.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.0",
    "huggingface_hub>=1.9.0",
    "idna>=3.11",
    "importlib_metadata>=8.5.0",
    "Jinja2>=3.1.0",
    "jiter>=0.13.0",
    "jsonpatch>=1.33",
    "jsonpointer>=3.1.0",
    "jsonschema>=4.23.0",
    "jsonschema-specifications>=2025.9.0",
    "langchain>=1.2.0",
    "langchain-core>=1.2.0",
    "langgraph>=1.1.0",
    "langgraph-checkpoint>=4.0.0",
    "langgraph-prebuilt>=1.0.0",
    "langgraph-sdk>=0.3.0",
    "langsmith>=0.7.0",
    "litellm>=1.83.0",
    "markdown-it-py>=4.0.0",
    "MarkupSafe>=3.0.0",
    "mdurl>=0.1.0",
    "multidict>=6.7.0",
    "openai>=2.30.0",
    "orjson>=3.11.0",
    "ormsgpack>=1.12.0",
    "packaging>=26.0",
    "propcache>=0.4.0",
    "pydantic>=2.12.0",
    "pydantic_core>=2.41.0",
    "Pygments>=2.20.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "referencing>=0.37.0",
    "regex>=2026.4.0",
    "requests>=2.33.0",
    "requests-toolbelt>=1.0.0",
    "rich>=14.3.0",
    "rpds-py>=0.30.0",
    "shellingham>=1.5.0",
    "sniffio>=1.3.0",
    "tenacity>=9.1.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.0",
    "tqdm>=4.67.0",
    "typer>=0.23.0",
    "typing-inspection>=0.4.0",
    "typing_extensions>=4.15.0",
    "urllib3>=2.6.0",
    "uuid_utils>=0.14.0",
    "xxhash>=3.6.0",
    "yarl>=1.23.0",
    "zipp>=3.23.0",
    "zstandard>=0.25.0",
    "pypdf>=5.0.0",
    "python-docx>=0.8.11",
    "python-magic>=0.4.27",
    "faiss-cpu>=1.13.0",
    "qdrant-client>=1.9.0,<1.13.0",
    "langchain-openai>=1.0.0",
    "langchain-ollama>=0.2.0",
    "ollama>=0.4.0,<0.6.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=1.1.0",
    "streamlit>=1.56.0",
    "fastapi>=0.135.0",
    "uvicorn>=0.44.0",
    "python-multipart>=0.0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
langchain-cli = "langchain_llm_toolkit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_llm_toolkit"]

[tool.uv]
package = false
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest-cov>=7.1.0",
    "types-requests>=2.33.0.20260408",
    "bandit>=1.9.4",
]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
