[project]
name = "langchain-llm-toolkit"
version = "0.1.0"
description = "一个基于 LangChain 和 LiteLLM 的完整 LLM 工具集，支持文本生成、聊天对话和 RAG 文档问答"
authors = [
    { name = "Erishen Sun", email = "erishen@qq.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
keywords = ["langchain", "llm", "rag", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "investkit-utils",
    "langchain>=0.3.0,<0.4.0",
    "langchain-core>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-openai>=0.2.0,<0.4.0",
    "langchain-ollama>=0.2.0,<0.4.0",
    "langchain-text-splitters>=0.3.0,<0.4.0",
    "litellm>=1.50.0",
    "faiss-cpu>=1.7.0",
    "qdrant-client>=1.9.0,<1.13.0",
    "pypdf>=5.0.0",
    "python-docx>=0.8.11",
    "python-magic>=0.4.27",
    "streamlit>=1.30.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "PyJWT>=2.8.0",
    "tenacity>=8.0.0",
    "requests>=2.31.0",
    "ollama>=0.4.0,<0.6.0",
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=7.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
    "bandit>=1.9.0",
]

[project.scripts]
langchain-cli = "langchain_llm_toolkit.cli:app"
langchain-api = "langchain_llm_toolkit.api:run_server"
langchain-import = "langchain_llm_toolkit.import_docs:main"
langchain-evaluate = "langchain_llm_toolkit.evaluate_rag:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_llm_toolkit"]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=7.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
    "bandit>=1.9.0",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.uv.sources]
investkit-utils = { workspace = true }


